--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="sampleApp">
 <head>
     <meta charset="utf-8">
-    <title>AngularForms | Sample application</title>
+    <title>AngularCodeMirror | Sample application</title>
     <link rel="stylesheet" href="/bower_components/twitter/dist/css/bootstrap.min.css" >
     <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.min.css" >
     <link rel="stylesheet" href="/bower_components/jqueryui/themes/redmond/jquery-ui.min.css" >
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.angularforms.com">Angular CodeMirror</a>
+                <a class="navbar-brand" href="/">Angular CodeMirror</a>
             </div>
         </div>
     </nav>
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <a class="navbar-brand pull-right" href="http://www.angularforms.com">Angular CodeMirror</a>
+                    <a class="navbar-brand pull-right" href="/">Angular CodeMirror</a>
                 </div>
             </div>
         </div>
