--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/bower_components/codemirror/lib/codemirror.css" >
     <link rel="stylesheet" href="/bower_components/codemirror/theme/elegant.css" >
     <link rel="stylesheet" href="/bower_components/codemirror/addon/lint/lint.css" >
-    <link rel="stylesheet" href="/lib/angular-codemirror.css" >
+    <link rel="stylesheet" href="/lib/AngularCodeMirror.css" >
     <link rel="stylesheet" href="/app/css/sampleApp.css" >
 
     <script src="/bower_components/angular/angular.min.js"></script>
@@ -51,11 +51,11 @@
 
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/jqueryui/ui/minified/jquery-ui.min.js"></script>
-    <script src="/bower_components/twitter/dist/js/bootstrap.min.js"></script>
+    <script src="/bower_components/twitter/dist/js/bootstrap.min.js"></script>    
+    
+    <!-- bits to support code mirror -->
     <script src="/bower_components/js-yaml/js-yaml.min.js"></script>
     <script src="/bower_components/jsonlint/lib/jsonlint.js"></script>
-    
-    <!-- code mirror bits -->
     <script src="/bower_components/codemirror/lib/codemirror.js"></script>
     <script src="/bower_components/codemirror/mode/javascript/javascript.js"></script>
     <script src="/bower_components/codemirror/mode/yaml/yaml.js"></script>
